resolves #1004 [Tock Studio] used tock-input-label in the bubbles

--- a/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/bot-bubble/bot-bubble.component.html
@@ -2,7 +2,7 @@
   <div class="bot-bubble">
     <div class="avatar-bot"></div>
     <div class="bot-bubble-content">
-      <span class="text">{{label}}</span>
+      <tock-input-label [text]="label" placeholder="Enter bot phrase..."></tock-input-label>
       <div class="edit-button">
         <button nbButton>
           <nb-icon icon="edit-2"></nb-icon>
