fixes #970 case-insensitive configuration path
Signed-off-by: Francois Nollen <francois.nollen@gmail.com>

--- a/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
+++ b/bot/admin/web/src/app/configuration/bot/bot-configuration.component.html
@@ -80,7 +80,7 @@
     <input matInput placeholder="Connector identifier" [(ngModel)]="configuration.applicationId">
   </mat-form-field>
   <mat-form-field class="bot-input">
-    <input matInput placeholder="Relative REST path" [(ngModel)]="configuration.path" title="e.g. /messenger">
+    <input matInput placeholder="Relative REST path" [(ngModel)]="configuration.path" (change)="changePath()" title="e.g. /messenger">
   </mat-form-field>
   <span *ngIf="botSharedService.configuration && botSharedService.configuration.botApiSupport" class="targetUrl">Connector url: {{botSharedService.configuration.botApiBaseUrl}}{{configuration.path}}</span>
   <nb-accordion
