resolves #1004 [Tock Studio] changed model and started building a story

--- a/bot/admin/web/src/app/bot/story-builder/add-bubble-button/add-bubble-button.component.html
+++ b/bot/admin/web/src/app/bot/story-builder/add-bubble-button/add-bubble-button.component.html
@@ -15,7 +15,8 @@
   -->
 
 <div class="button-container">
-  <button nbButton ghost (click)="action()" class="align-center">
+  <tock-input-label *ngIf="showInputLabel" [editing]="true" [saveAction]="save"></tock-input-label>
+  <button *ngIf="!showInputLabel" nbButton ghost (click)="showInputLabel=true" class="align-center">
     <nb-icon icon="plus-circle"></nb-icon>
   </button>
 </div>
