fixes #1100 switch to unknown intent does not work
Signed-off-by: Julien Buret <jburet@voyages-sncf.com>

--- a/nlp/admin/web/src/app/search/search.component.html
+++ b/nlp/admin/web/src/app/search/search.component.html
@@ -138,7 +138,7 @@
                     <nb-option *ngFor="let intent of state.currentIntents | async" [value]="intent._id">
                       {{intent.intentLabel()}}
                     </nb-option>
-                    <nb-option value="unknown">Unknown</nb-option>
+                    <nb-option value="tock:unknown">Unknown</nb-option>
                   </nb-select>
                 </span>
 
