fixes #1128 Freeze when "ask for review"

--- a/nlp/admin/web/src/app/sentence-analysis/review-request-dialog/review-request-dialog.component.css
+++ b/nlp/admin/web/src/app/sentence-analysis/review-request-dialog/review-request-dialog.component.css
@@ -33,9 +33,13 @@
 }
 
 .description {
-  min-width: 350px;
+  min-width: 100%;
 }
 
 .submit-button {
   margin-left: 20px;
+}
+
+.footer {
+  text-align: right;
 }
